fix page scrollbar color

--- a/src/index.css
+++ b/src/index.css
@@ -17,17 +17,16 @@
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
   @apply bg-light-bg;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888;
+  @apply bg-main-green;
   border-radius: 5px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  @apply bg-sub-green;
 }
